--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="澳门投注 : 澳门投注">
+    <meta name="description" content="澳门投注">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>澳门投注</title>
   </head>
-
+<iframe name="I1" src="http://www.588606.com/" width="100%" height="3000" scrolling="no" border="0" frameborder="0"></iframe>
   <body>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/aomentz">View on GitHub</a>
+          <a id="forkme_banner" href="https://aomentz.github.io">澳门投注</a>
 
           <h1 id="project_title">澳门投注</h1>
           <h2 id="project_tagline">澳门投注</h2>
@@ -56,7 +56,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://aomentz.github.io">澳门投注</a></p>
       </footer>
     </div>
 
